# logoize

./: .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
news/: 1.feature  2.misc  4.misc  5.misc  6.docs  7.docs  8.misc
src/logoize/: api.py  cli.py
src/logoizer/: __init__.py  __main__.py  _main.py  _version.py  api.py  cli.py
