[project]
name = "csdms_logoizer"
requires-python = ">=3.10"
description = "Make CSDMS text logos"
keywords = [
    "csdms",
    "logo",
]
authors = [
    { email = "mcflugen@gmail.com" },
    { name = "Eric Hutton" },
]
maintainers = [
    { email = "mcflugen@gmail.com" },
    { name = "Eric Hutton" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "matplotlib>=3.2",
]
dynamic = [
    "readme",
    "version",
]

[project.license]
text = "MIT"

[project.urls]
changelog = "https://github.com/mcflugen/logoizer/blob/main/CHANGES.rst"
documentation = "https://github.com/mcflugen/logoizer/blob/main/README.rst"
repository = "https://github.com/mcflugen/logoize"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "isort",
    "nox",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-runner",
    "towncrier",
    "zestreleaser.towncrier",
]
doc = [
    "furo",
    "pygments>=2.4",
    "sphinx",
    "sphinx-inline-tabs",
]

[project.scripts]
logoize = "logoizer._main:main"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.setuptools.dynamic.version]
attr = "logoizer._version.__version__"

[tool.setuptools.package-data]
logoizer = [
    "fonts/Quicksand/*.ttf",
    "fonts/Quicksand/static/*.ttf",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/logoizer",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
    "examples",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--strict",
    "--durations=16",
    "--doctest-modules",
    "-vvv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "notebook: marks tests as notebook (deselect with '-m \"not notebook\"')",
]

[tool.towncrier]
directory = "news"
package = "logoizer"
filename = "CHANGES.rst"
single_file = true
underlines = "-`^"
issue_format = "`#{issue} <https://github.com/mcflugen/logoizer/issues/{issue}>`_"
title_format = "{version} ({project_date})"
type = [
    { directory = "feature", name = "New Features", showcontent = true },
    { directory = "bugfix", name = "Bug Fixes", showcontent = true },
    { directory = "docs", name = "Documentation Enhancements", showcontent = true },
    { directory = "misc", name = "Other Changes and Additions", showcontent = true },
]
